force-app/main/default/objects/WTA__Web_To_Any_Exception__c/WTA__Web_To_Any_Exception__c.object-meta.xml
<CustomObject>
    <label>Web To Any Exception</label>
    <nameField>
        <displayFormat>EX - {0000000000}</displayFormat>
        <label>Web To Any Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web To Any Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>