force-app/main/default/objects/WTA__Web_To_Any_Exception__c/fields/WTA__Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>WTA__Configuration_Id__c</fullName>
    <label>Configuration Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>