force-app/main/default/objects/WTA__Web_To_Any_Exception__c/fields/WTA__Error_Log__c.field-meta.xml
<CustomField>
    <fullName>WTA__Error_Log__c</fullName>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>