force-app/main/default/objects/WTA__Web_To_Any_Exception__c/fields/WTA__Error_Log_Key__c.field-meta.xml
<CustomField>
    <fullName>WTA__Error_Log_Key__c</fullName>
    <label>Error Log Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>