force-app/main/default/objects/WTA__Web_To_Any_Exception__c/fields/WTA__Exception_Belong__c.field-meta.xml
<CustomField>
    <fullName>WTA__Exception_Belong__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Belong</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Web_To_Any_Exception</relationshipName>
    <type>Lookup</type>
</CustomField>