force-app/main/default/objects/WTA__Web_To_Any_Exception__c/fields/WTA__UserData__c.field-meta.xml
<CustomField>
    <fullName>WTA__UserData__c</fullName>
    <label>User Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>